# oss

./: .gitignore  .gitlab-ci.yml  README.md  bundle-new.yml  bundle.yml  config.yml
.ansible/: ansible-playbook  ansible.cfg  gitlab-runner.yml  hosts.yaml  install.yml  nexus3.yml  pyenv.yml  run  setup.sh  test.yaml
.ansible/command/: ci.py  gitlab-ci  gitlab-ci.cmd  gitlab-ci.py  test.py  test.sh
.ansible/config/: gitlab-runner.yml  hosts  hosts.yml
.ansible/docker/: Dockerfile  build.sh
.ansible/helpers/: README.md  install-k8s.sh
.docs/: gitlab-runner.md  package-overview.md
.docs/image/: gitlab-runner.md
.gitlab-ci/: .config.yml  7zip.yml  autoconf.yml  automake.yml  bison.yml  brotli.yml  bzip2.yml  c-ares.yml  config.yml  expat.yml  flex.yml  gtest.yml  iperf.yml  libcurl.yml  libiconv.yml  libtool.yml  libwebsockets.yml  m4.yml  meson.yml  mosquitto.yml  nasm.yml  ninja.yml  openssl.yml  pcre.yml  pkgconf.yml  protobuf-c.yml  protobuf.tool.yml  protobuf.yml  protoc.yml  pthreads4w.yml  re2c.yml  sqlite3.yml  trigger.yml  winflexbison.yml  xz_utils.yml  zlib.tool.yml  zlib.yml
.gitlab-ci/.script/: gitlab-ci  gitlab-ci.cmd  gitlab-ci.py
.gitlab-ci/package/: 7zip.yml  a52dec.yml  autoconf.yml  automake.yml  bison.yml  brotli.yml  bzip2.yml  expat.yml  flex.yml  gtest.yml  libcurl.yml  libelf.yml  libffi.yml  libiconv.yml  libmount.yml  libselinux.yml  libtool.yml  libwebsockets.yml  m4.yml  meson.yml  mosquitto.yml  nasm.yml  ninja.yml  openssl.yml  pcre.yml  pcre2.yml  pkgconf.yml  protobuf-c.yml  protobuf.tool.yml  protobuf.yml  protoc.yml  pthreads4w.yml  re2c.yml  sqlite3.yml  winflexbison.yml  xz_utils.yml  zlib.tool.yml  zlib.yml
.gitlab-ci/script/: configure.py  main.py
.toolkit/: ansible.sh
.toolkit/ansible/: README.md  ansible.cfg  config.yml  deploy.yml  gitlab-runner-config.yml  gitlab-runner-install.yml  gitlab-runner-register.yml  gitlab-runner-unregister.yml  gitlab-runner.yml  gitlab.yml  hosts  init  install.yml  playbook  run  run.py
.toolkit/docs/: gitlab-runner.md
.toolkit/lib/: ci.py  configure.py
.toolkit/oss_utils/: setup.py
.toolkit/script/: artifactory.py  bundle  bundle.py  gitlab-runner.py  init.sh  setup.py  utils.py
7zip/: conandata.yml  conanfile.py  package.yml
7zip/test_package/: conanfile.py
a52dec/: conandata.yml  conanfile.py  package.yml
a52dec/patches/: CMakeLists.txt  liba52.def  libao.def
autoconf/: conanfile.py  package.yml
autoconf/test_package/: conanfile.py
automake/: conanfile.py  package.yml
automake/test_package/: conanfile.py
bison/: conanfile.py  package.yml
bison/test_package/: conanfile.py
brotli/: conanfile.py  package.yml
brotli/test_package/: conanfile.py
bzip2/: conanfile.py  package.yml
bzip2/test_package/: conanfile.py
c-ares/: conanfile.py  package.yml
c-ares/test_package/: conanfile.py
expat/: conanfile.py  package.yml
expat/test_package/: conanfile.py
flex/: conanfile.py  package.yml
flex/test_package/: conanfile.py
gettext/: build.sh  conanfile.py  package.yml
glib/: conanfile.py  package.yml
gnu-config/: conanfile.py  package.yml
gnu-config/test_package/: conanfile.py
gobject-introspection/: conanfile.py  package.yml
gobject-introspection/test_package/: conanfile.py
gst-plugins-base/: conandata.yml  conanfile.py  package.yml
gst-plugins-base/test_package/: conanfile.py
gstreamer/: conanfile.py  package.yml
gtest/: conanfile.py  package.yml
gtest/test_package/: conanfile.py
iperf/: conandata.yml  conanfile.py  package.yml
libcurl/: conanfile.py  package.yml
libcurl/test_package/: conanfile.py
libelf/: conanfile.py  package.yml
libelf/test_package/: CMakeLists.txt  conanfile.py
libffi/: conanfile.py  package.yml
libffi/test_package/: conanfile.py
libgettext/: conanfile.py  package.yml
libgettext/test_package/: conanfile.py
libiconv/: conanfile.py  package.yml
libiconv/test_package/: conanfile.py
libmount/: conanfile.py  package.yml
libmount/test_package/: conanfile.py
libselinux/: conanfile.py  package.yml
libtool/: conanfile.py  package.yml
libtool/test_package/: conanfile.py
libwebsockets/: conandata.yml  conanfile.py  package.yml
libwebsockets/test_package/: conanfile.py  test_package.c
m4/: conanfile.py  package.yml
m4/test_package/: conanfile.py
meson/: conanfile.py  package.yml
meson/test_package/: conanfile.py
mosquitto/: CMakeLists.txt  conandata.yml  conanfile.py  package.yml
mosquitto/test_package/: conanfile.py  test_package.c
msys2/: conandata.yml  conanfile.py  package.yml
msys2/mirrorlist/: mirrorlist.mingw32  mirrorlist.mingw64  mirrorlist.msys
msys2/test_package/: conanfile.py
nasm/: conanfile.py  package.yml
nasm/test_package/: conanfile.py
ninja/: conanfile.py  package.yml
ninja/test_package/: conanfile.py
openssl/: conandata.yml  conanfile.py  package.yml
openssl/test_package/: conanfile.py
pcre/: conanfile.py  package.yml
pcre/test_package/: conanfile.py
pcre2/: conanfile.py  package.yml
pcre2/test_package/: conanfile.py
pkgconf/: conandata.yml  conanfile.py  package.yml
pkgconf/test_package/: conanfile.py
protobuf/: conanfile.py  package.yml
protobuf-c/: CMakeLists.txt  conandata.yml  conanfile.py  package.yml
protobuf-c/cmake/: CMakeLists.txt  CMakeLists.txt-1.1.1  protobuf-c-config.cmake.in
protobuf-c/test_package/: conanfile.py  test_package.c
protobuf/patches/: protobuf-config.cmake.in  protobuf-module.cmake.in
protobuf/test_package/: CMakeLists.txt  addressbook.proto  conanfile.py
protoc/: conanfile.py  package.yml
pthreads4w/: conanfile.py  package.yml
pthreads4w/test_package/: conanfile.py
re2c/: conanfile.py  package.yml
re2c/test_package/: conanfile.py
sqlite3/: CMakeLists.txt  conanfile.py  package.yml
sqlite3/test_package/: conanfile.py
strawberryperl/: conanfile.py  package.yml
strawberryperl/test_package/: conanfile.py
winflexbison/: conanfile.py  package.yml
winflexbison/test_package/: conanfile.py
xz_utils/: conanfile.py  package.yml
zlib/: conanfile.py  package.yml
(+163 files in other folders)
